# hpatterns

./: .gitignore  LICENSE  README.md  hmatch.cabal  hpatterns.cabal  stack.yaml
archived/: Case1.hs  Case2.hs  Case3.hs  Case4.hs  Examples.hs  README.md
archived/E/: Dummies.hs  Ex1.hs  Ex5.hs  TH.hs
archived/Xp/: Core.hs  HalftimeExamples.hs  TH.hs
src/: Case0.hs  Case1.hs  Case2.hs  Case4.hs  Case5.hs  Examples.hs  HExp.hs  Xp.hs  XpCompile.hs  XpExample.hs
src/E/: CTypes.hs  Compile.hs  Core.hs  Dummies.hs  Ex0.hs  Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Examples.hs  Lang.hs  TH.hs
src/E/Examples/: Contrived.hs  Litmatch.hs  Nested.hs  Watering.hs
src/Xp/: Compile.hs  Core.hs  Examples.hs  ExamplesTypes.hs  TH.hs
