cabal-version:       2.4

name:                hmatch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Thomas Li
maintainer:          guslithd@student.gu.se
category:            Language
extra-source-files:
  README.md

library
  exposed-modules:
      E.Core

    , Xp.Core
    , Xp.Compile
    , Xp.Examples
    , Xp.HalftimeExamples
    , Xp.TH
  build-depends:
      base ^>=4.12.0.0
    , containers
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
