cabal-version:       2.4

name:                hmatch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Thomas Li
maintainer:          guslithd@student.gu.se
category:            Language
extra-source-files:
  README.md

library
  exposed-modules:
      E.Bits
    , E.Core
    , E.Compile
    , E.CTypes

    , E.Dummies

    , E.Ex0
    , E.Ex1
    , E.Ex2
    , E.Ex3
    , E.Ex4
    , E.Ex5
    , E.Ex6

    , E.TH

    -- , Xp.Core
    -- , Xp.Compile
    -- , Xp.Examples
    -- , Xp.HalftimeExamples
    -- , Xp.TH
  build-depends:
      base ^>=4.14.1.0
    , containers
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , template-haskell
    , sop-core
    , generics-sop
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
  ghc-options:
    -Wall
