cabal-version:       2.4

name:                hpatterns
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Thomas Li
maintainer:          guslithd@student.gu.se
category:            Language
extra-source-files:
  README.md

library
  exposed-modules:
      E.Core
    , E.Compile
    , E.CTypes
    , E.Lang
    , E.TH

    , E.Examples.Contrived
    , E.Examples.Watering

  build-depends:
      base ^>=4.14.1.0
    , containers
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
